--- a/README.Rmd
+++ b/README.Rmd
@@ -168,3 +168,13 @@ mtcars_tidy <- mtcars %>%
 
 mtcars_tidy
 ```
+
+## WorldPhone
+```{r WorldPhones}
+WorldPhones_tidy <- WorldPhones %>% as.data.frame() %>%
+  mutate(year=rownames(.)) %>%
+  gather(continent, value, -year) %>%
+  tbl_df
+
+WorldPhones_tidy
+```
